kubernetes/manifests/glance/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: glance
  labels:
    app: glance
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: glance-container
          image: glanceapp/glance
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 200m
          volumeMounts:
            - name: glance
              mountPath: /app/config/glance.yml
              subPath: glance.yml
              readOnly: true
            - name: glance
              mountPath: /app/config/infrastructure.yml
              subPath: infrastructure.yml
              readOnly: true
            - name: glance
              mountPath: /app/config/infrastructure-platform.yml
              subPath: infrastructure-platform.yml
              readOnly: true
            - name: glance
              mountPath: /app/config/infrastructure-apps.yml
              subPath: infrastructure-apps.yml
              readOnly: true
            - name: glance
              mountPath: /app/config/infrastructure-components.yml
              subPath: infrastructure-components.yml
              readOnly: true
            - name: glance
              mountPath: /app/config/widget-cloudflare.yml
              subPath: widget-cloudflare.yml
              readOnly: true
            - name: glance
              mountPath: /app/config/widget-truenas.yml
              subPath: widget-truenas.yml
              readOnly: true
            - name: glance
              mountPath: /app/config/widget-unifi.yml
              subPath: widget-unifi.yml
              readOnly: true
            - name: glance
              mountPath: /app/config/widget-tautulli.yml
              subPath: widget-tautulli.yml
              readOnly: true
            - name: glance
              mountPath: /app/config/widget-epic.yml
              subPath: widget-epic.yml
              readOnly: true
            - name: glance
              mountPath: /app/config/widget-adguard.yml
              subPath: widget-adguard.yml
              readOnly: true
      imagePullSecrets:
        - name: dockerhub-token
      volumes:
        - name: glance
          projected:
            sources:
              - configMap:
                  name: glance
              - configMap:
                  name: glance-pages
