kubernetes/manifests/glance/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance-http-route
  namespace: glance
  annotations:
    external-dns.alpha.kubernetes.io/hostname: start.nullservers.com
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: https-wildcard
  hostnames:
    - "start.nullservers.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: glance
          port: 80
